# atlas-agent

./: .gitignore  Dockerfile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: NOTES_phase0.md  NOTES_phase1.md
src/atlas/: __init__.py  retrieval.py  store.py  tools.py
tests/: test_retrieval.py  test_store.py  test_tools.py
